syntax = "proto3";

package auth.v1;

import "validate/validate.proto";

option go_package = "github.com/Shakkuuu/sekai-songs-mylist/internal/gen/auth/v1;authv1";

message SignupRequest {
  string email = 1 [(validate.rules).string.email = true];
  string password = 2 [(validate.rules).string = {
    min_len: 8
    max_len: 72
    pattern: "^[A-Za-z\\d!@#$%^&*()_+=-]+$"
  }];
  string check_password = 3 [(validate.rules).string = {
    min_len: 8
    max_len: 72
    pattern: "^[A-Za-z\\d!@#$%^&*()_+=-]+$"
  }];
}
message SignupResponse {}

message LoginRequest {
  string email = 1 [(validate.rules).string.email = true];
  string password = 2 [(validate.rules).string = {
    min_len: 8
    max_len: 72
    pattern: "^[A-Za-z\\d!@#$%^&*()_+=-]+$"
  }];
}
message LoginResponse {
  string token = 1;
}

service AuthService {
  rpc Signup(SignupRequest) returns (SignupResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}
