syntax = "proto3";

package user.v1;

import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

option go_package = "github.com/Shakkuuu/sekai-songs-mylist/internal/gen/user/v1;userv1";

// User
message User {
  string id = 1;
  string email = 2;
  string password = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  google.protobuf.Timestamp deleted_at = 6;
}

message UserInfoRequest {}
message UserInfoResponse {
  string id = 1;
  string email = 2;
  google.protobuf.Timestamp created_at = 4;
}

message LogoutRequest {}
message LogoutResponse {}

message ChangeEmailRequest {
  string email = 1 [(validate.rules).string.email = true];
}
message ChangeEmailResponse {
  string id = 1;
  string email = 2;
  google.protobuf.Timestamp created_at = 4;
}

message ChangePasswordRequest {
  string old_password = 1 [(validate.rules).string = {
    min_len: 8
    max_len: 72
    pattern: "^[A-Za-z\\d!@#$%^&*()_+=-]+$"
  }];
  string new_password = 2 [(validate.rules).string = {
    min_len: 8
    max_len: 72
    pattern: "^[A-Za-z\\d!@#$%^&*()_+=-]+$"
  }];
  string new_check_password = 3 [(validate.rules).string = {
    min_len: 8
    max_len: 72
    pattern: "^[A-Za-z\\d!@#$%^&*()_+=-]+$"
  }];
}
message ChangePasswordResponse {
  string id = 1;
  string email = 2;
  google.protobuf.Timestamp created_at = 4;
}

message DeleteUserRequest {}
message DeleteUserResponse {}

service UserService {
  rpc UserInfo(UserInfoRequest) returns (UserInfoResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  rpc ChangeEmail(ChangeEmailRequest) returns (ChangeEmailResponse);
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}
